--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 .env
 .idea
 mockingtests/mockingtests/__pycache__/
+mockingtests/posts/__pycache__/
+mockingtests/db.sqlite3
+mockingtests/posts/migrations/__pycache__/
